--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-Django==4.2.2
-django-bootstrap-v5==1.0.11
-djangorestframework==3.14.0
-nest-asyncio==1.5.6
-numpy==1.24.2
-packaging==22.0
-pandas==2.0.0
-pandas-ta==0.3.14b0
-polygon-api-client==1.10.1
-proglog==0.1.9
-responses==0.23.1
-SecretStorage==3.3.3
-uvicorn==0.15.0
-websocket-client==1.5.3
-websockets==11.0.3
+Django
+django-bootstrap-v5
+djangorestframework
+nest-asyncio
+numpy
+pandas
+pandas-ta
+polygon-api-client
+proglog
+responses
+SecretStorage
+uvicorn
+websocket-client
+websockets
 
